# internal/protocol/lmtp/responses.go
@@ -30,6 +30,7 @@ const (
 	responseStatusAuthContinue    = "334"
 	responseStatusDataContinue    = "354"
 	responseStatusTemporary       = "451"
+	responseStatusMailboxReject   = "550"
 	responseStatusAuthUnavailable = "454"
 	responseStatusSyntax          = "500"
 	responseStatusParameter       = "501"
@@ -38,17 +39,19 @@ const (
 	responseStatusAuthRequired    = "530"
 	responseStatusAuthRejected    = "535"
 
-	enhancedOK              = "2.0.0"
-	enhancedAuthOK          = "2.7.0"
-	enhancedClosing         = "2.0.0"
-	enhancedTemporary       = "4.3.0"
-	enhancedAuthUnavailable = "4.7.0"
-	enhancedSyntax          = "5.5.2"
-	enhancedParameter       = "5.5.4"
-	enhancedUnavailable     = "5.5.1"
-	enhancedBadSequence     = "5.5.1"
-	enhancedAuthRequired    = "5.7.0"
-	enhancedAuthRejected    = "5.7.8"
+	enhancedOK               = "2.0.0"
+	enhancedAuthOK           = "2.7.0"
+	enhancedClosing          = "2.0.0"
+	enhancedTemporary        = "4.3.0"
+	enhancedDifferentBackend = "4.3.2"
+	enhancedMailboxReject    = "5.1.1"
+	enhancedAuthUnavailable  = "4.7.0"
+	enhancedSyntax           = "5.5.2"
+	enhancedParameter        = "5.5.4"
+	enhancedUnavailable      = "5.5.1"
+	enhancedBadSequence      = "5.5.1"
+	enhancedAuthRequired     = "5.7.0"
+	enhancedAuthRejected     = "5.7.8"
 
 	maxResponseTextBytes = 256
 )
@@ -67,11 +70,13 @@ const (
 	commandSyntaxText        = "Command syntax error"
 	dataContinueText         = "End data with <CR><LF>.<CR><LF>"
 	dataQueuedText           = "Message accepted"
+	differentBackendText     = "Recipient must be retried separately"
 	lhloDomainText           = "nauthilus-director"
 	malformedAuthText        = "Invalid AUTH command"
 	malformedBDATText        = "Invalid BDAT command"
 	malformedMailText        = "Invalid MAIL command"
 	malformedRcptText        = "Invalid RCPT command"
+	recipientLookupText      = "Recipient lookup temporarily unavailable"
 	noTLSAuthText            = "Must issue STARTTLS first"
 	noopText                 = "OK"
 	quitText                 = "Bye"
